--- a/css/main.css
+++ b/css/main.css
@@ -747,9 +747,14 @@ body {
 
 .footer__logo {
   display: block;
-  text-align: center;
   color: var(--secondary-text-color);
   margin-bottom: 20px;
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__logo {
+    text-align: center;
+  }
 }
 
 .footer__contact-thumb {
@@ -761,10 +766,15 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.17;
-  text-align: center;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
   margin-bottom: 60px;
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__address {
+    text-align: center;
+  }
 }
 
 .footer__subtitle {
@@ -773,10 +783,15 @@ body {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
-  text-align: center;
   text-transform: uppercase;
   margin-bottom: 20px;
   color: var(--secondary-text-color);
+}
+
+@media screen and (max-width: 1199px) {
+  .footer__subtitle {
+    text-align: center;
+  }
 }
 
 .footer__contact-link {
@@ -784,10 +799,14 @@ body {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.17;
-  text-align: center;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
   margin-top: 8px;
+  transition: color var(--transition-duration) var(--transition-timing-function);
+}
+
+.footer__contact-link:hover, .footer__contact-link:focus {
+  color: var(--accent-color);
 }
 
 .soc-list {
@@ -831,7 +850,12 @@ body {
   box-sizing: border-box;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
-  margin-bottom: 20px;
+}
+
+@media screen and (max-width: 1199px) {
+  .footer-form__field {
+    margin-bottom: 20px;
+  }
 }
 
 .footer-form__field:focus {
@@ -861,6 +885,11 @@ body {
   line-height: 30px;
   letter-spacing: 0.06em;
   color: var(--secondary-text-color);
+  transition: background-color var(--transition-duration) var(--transition-timing-function);
+}
+
+.footer-form__btn:hover, .footer-form__btn:focus {
+  background-color: #188CE8;
 }
 
 .footer-form__icon-send {
@@ -895,6 +924,19 @@ body {
 @media screen and (min-width: 1200px) {
   .footer__container {
     display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+  }
+  .footer-form {
+    display: flex;
+    align-items: center;
+  }
+  .footer-form__field {
+    width: 358px;
+    margin-right: 12px;
+  }
+  .footer__contacts {
+    margin-right: 70px;
   }
 }
 
