--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -5,9 +5,12 @@
 
 .footer__logo {
     display: block;
-    text-align: center;
     color: var(--secondary-text-color);
     margin-bottom: 20px;
+
+    @media screen and (max-width: 1199px) {
+        text-align: center;
+    }
 }
 
 .footer__contact-thumb {
@@ -19,10 +22,13 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 1.17;   
-    text-align: center;
     letter-spacing: 0.03em;    
     color: var(--secondary-text-color);
     margin-bottom: 60px;
+
+    @media screen and (max-width: 1199px){
+        text-align: center;        
+    }
 
 }
 
@@ -32,10 +38,13 @@
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
-    text-align: center;
     text-transform: uppercase; 
     margin-bottom: 20px;   
     color: var(--secondary-text-color);
+
+    @media screen and (max-width: 1199px) {
+        text-align: center;
+    }
 }
 
 .footer__contact-link {
@@ -43,10 +52,16 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 1.17;
-    text-align: center;
     letter-spacing: 0.03em;    
     color: rgba(255, 255, 255, 0.6);
     margin-top: 8px;
+
+    transition: color var(--transition-duration) var(--transition-timing-function);
+    
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
 }
 
 .soc-list {
@@ -91,7 +106,10 @@
     box-sizing: border-box;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
-    margin-bottom: 20px;
+
+    @media screen and (max-width: 1199px) {
+        margin-bottom: 20px;        
+    }
 
     &:focus {
         outline: 2px solid var(--accent-color);
@@ -122,6 +140,12 @@
     line-height: 30px;    
     letter-spacing: 0.06em;
     color: var(--secondary-text-color);
+    transition: background-color var(--transition-duration) var(--transition-timing-function);
+
+    &:hover,
+    &:focus {
+        background-color: #188CE8;
+    }
 }
 
 .footer-form__icon-send {
@@ -159,6 +183,22 @@
 
     .footer__container {
         display: flex;
+        align-items: baseline;
+        justify-content: space-between;
+    }
+
+    .footer-form {
+        display: flex;
+        align-items: center;
+
+        &__field {
+            width: 358px;
+            margin-right: 12px;
+        }
+    }
+
+    .footer__contacts {
+        margin-right: 70px;
     }
 }
    
